# project-network-synapse-3

./: .coderabbit.yaml  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  base-build-doc.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-github-project.sh
.agents/workflows/: run-quality-checks.md  setup-project.md  start-infrastructure.md
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  file-filters.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: bug-triage.yml  build-artifacts.yml  ci.yml  deploy.yml  issue-close-guard.yml  pr-lint.yml  pr-validation.yml  release.yml
ansible/playbooks/: deploy_bgp.yml
backend/: pyproject.toml
backend/network_synapse/data/: populate_sot.py  seed_data.yml
backend/network_synapse/infrahub/: __init__.py  client.py  models.py
backend/network_synapse/schemas/: bgp_session.yml  load_schemas.py  network_device.yml
backend/network_synapse/scripts/: deploy_configs.py  generate_configs.py  hygiene_checker.py  validate_configs.py  validate_state.py
changelog/: 50.added.md  51.added.md  74.added.md
containerlab/: topology.clab.yml
dev/adr/: 0001-context-nuggets-pattern.md  0002-monorepo-restructuring-plan.md  0003-week3-deployment-validation-plan.md  0004-branch-per-environment-deployment.md  template.md
dev/commands/: _shared.md  fix-bug.md  guided-task.md
dev/guidelines/: changelog.md  git-workflow.md  issue-management.md  python.md  repository-organization.md
dev/guides/: pull-request-best-practices.md
dev/guides/backend/: adding-schemas.md  running-tests.md
dev/guides/workers/: adding-workflows.md
dev/knowledge/: cicd-architecture.md  week1-walkthrough.md  week2-walkthrough.md  week3-walkthrough.md  week4-walkthrough.md
dev/knowledge/backend/: architecture.md
dev/knowledge/workers/: architecture.md
development/: Dockerfile  deploy-to-vm.sh  docker-compose-deps.yml  docker-compose.yml  synapse-worker.service
development/filebeat/: filebeat.yml
development/grafana/dashboards/: automation-pipeline.json  capacity-planning.json  compliance-tracking.json  network-operations.json  system-health.json
development/grafana/provisioning/dashboards/: dashboards.yml
development/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
development/suzieq/: suzieq-inventory.yml
docker/: Dockerfile.temporal-worker
docs/: demo-script.md  infrastructure.md  install.md  manual-gcp-setup.md  runbooks.md  running-the-worker.md  schemas.md  seed-data.md
infrahub/data/: populate_sot.py
infrahub/schemas/: bgp_session.yml  load_schemas.py  network_device.yml  network_interface.yml
scripts/: deploy_configs.py  generate_configs.py  validate_configs.py
tasks/: __init__.py  backend.py  dev.py  docs.py  main.py  shared.py  workers.py
templates/: arista_bgp.j2  arista_interfaces.j2  srlinux_bgp.j2  srlinux_interfaces.j2
temporal_workers/: worker.py
temporal_workers/activities/: config_deployment_activities.py  device_backup_activities.py  infrahub_activities.py  validation_activities.py
temporal_workers/workflows/: drift_remediation_workflow.py  emergency_change_workflow.py  network_change_workflow.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_placeholder.py
tests/unit/: test_config_generation.py  test_placeholder.py  test_update_device_status.py  test_validate_interfaces.py
workers/: pyproject.toml
workers/synapse_workers/: worker.py
workers/synapse_workers/activities/: config_deployment_activities.py  device_backup_activities.py  infrahub_activities.py  validation_activities.py
workers/synapse_workers/workflows/: drift_remediation_workflow.py  emergency_change_workflow.py  network_change_workflow.py
