[project]
name = "network-synapse-workers"
version = "0.1.0"
description = "Network Synapse Temporal workers — durable workflow orchestration for network automation"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "temporalio>=1.4",
    "pydantic>=2.5",
    "httpx>=0.25",
    "network-synapse",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synapse_workers"]
